--- a/app.css
+++ b/app.css
@@ -1,6 +1,98 @@
-table > tr > td{
-    height: 100px;
-    width: 100px;
+table
+{
+    border-collapse: collapse;
+    position: relative;
+    float: left;
+    margin: 35px;
+
+}
+
+
+#wins
+{
+    display: block;
+    margin: 25px auto;
+    text-align: center;
+    width: 100%;
+}
+
+#wins thead
+{
+    background: #EAEAEA;
+}
+
+
+#wins .winner
+{
+    background:  #3C9300;
+}
+
+#wins::after
+{
+    clear: both;
+    content: "";
+    display: table;
+}
+
+#wins table
+{
+    margin: 0 auto;
+}
+
+#wins tr {
+    width: 100%;
+}
+
+#wins th,
+#wins td
+{
+    font-family: Helvetica, Arial, sans-serif;
+    padding: 10px;
+    width: 25%;
+    border: 1px solid #444;
+}
+
+#wins th {
+    white-space: nowrap;
+}
+
+#tables table tr td
+{
     border: 1px solid black;
-    background-color: green;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    height: 50px;
+    text-align: center;
+    width: 50px;
+}
+
+#tables table tr td.first-player
+{
+    background: #91FDF0;
+}
+
+#tables table tr:first-child td
+{
+    border-top: 0;
+}
+
+#tables table tr td:first-child
+{
+    border-left: 0;
+}
+
+#tables table tr td:last-child
+{
+    border-right: 0;
+}
+
+#tables table tr:last-child td
+{
+    border-bottom: 0;
+}
+
+#tables table tr td.winning
+{
+    background: #880000;
+    color: #FFFFFF;
 }
